--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     }
   },
   "require":     {
-    "php":               "^7.3",
+    "php":               ">=7.3",
     "ext-json":          "*",
     "guzzlehttp/guzzle": "~6.0"
   },
