--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   "require":     {
     "php":               ">=7.3",
     "ext-json":          "*",
-    "guzzlehttp/guzzle": "~7"
+    "guzzlehttp/guzzle": "^7"
   },
   "require-dev": {
     "codeception/codeception": "^4"
